# DOWS-Assignments

./: README.md  students.csv
MPI/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  assignment_a  assignment_b  cmake_install.cmake  fix  fix.cpp  main.cpp  read.txt  tutorial.cpp
MPI/trapezoidal/: trapezoidal.cpp  trapezoidal.h
Soap Service/WebContent/WEB-INF/: web.xml
Soap Service/src/com/soap/model/: Student.java
XML REST/: pom.xml
XML REST/src/main/java/com/xmlrest/: XmlRestApplication.java
XML REST/src/main/resources/: application.properties
XML REST/src/test/java/com/xmlrest/: XmlRestApplicationTests.java
eureka-server/: pom.xml
eureka-server/src/main/resources/: application.yml
student-service/: pom.xml
student-service/src/main/resources/: application.yml
student-view/: pom.xml
student-view/src/main/java/com/view/: StudentViewApplication.java
student-view/src/main/resources/: application.yml
student-view/src/main/resources/static/css/: dashboard.css
student-view/src/main/resources/static/js/: dashboard.js
student-view/src/main/resources/templates/: home.html  student-editor-update.html  student-editor.html  upload.html
student-view/src/test/java/com/view/: StudentRequestViewApplicationTests.java
xml-assignment/: pom.xml
xml-assignment/src/main/java/com/xml/: XmlAssignmentApplication.java
xml-assignment/src/main/resources/: application.properties  schema.sql
xml-assignment/src/main/resources/templates/: add-edit-student.html  list-students.html
xml-assignment/src/test/java/com/xml/: XmlAssignmentApplicationTests.java
(+21 files in other folders)
